--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -30,20 +30,23 @@
                 efficiency.
               </p>
             </div>
+            <div class="stats">
+              <div class="companies">
+                <h2>10k+</h2>
+                <p>companies</p>
+              </div>
+              <div class="templates">
+                <h2>314</h2>
+                <p>templates</p>
+              </div>
+              <div class="queries">
+                <h2>12m+</h2>
+                <p>queries</p>
+              </div>
+            </div>
           </div>
           <div class="right-side">
-            <div class="companies">
-              <h2>10k+</h2>
-              <p>companies</p>
-            </div>
-            <div class="templates">
-              <h2>314</h2>
-              <p>templates</p>
-            </div>
-            <div class="queries">
-              <h2>12m+</h2>
-              <p>queries</p>
-            </div>
+            <img src="./images/image-header-desktop.jpg" alt="people working" />
           </div>
         </div>
       </div>
